@@ -282,6 +282,28 @@
 						{$nodestats.month.download.data|string_format:"%.2f"} {$nodestats.month.download.units} ({$nodestats.month.downavg|string_format:"%d"} kbit/s) / {$nodestats.month.upload.data|string_format:"%.2f"} {$nodestats.month.upload.units} ({$nodestats.month.upavg|string_format:"%d"} kbit/s)
 					</TD>
 				</TR>
+				{if get_conf('phpui.live_traffic_helper')}
+				<TR>
+					<TD style="width: 1%; white-space: nowrap;">
+						<span class="bold">{trans("current:")}</span>
+					</TD>
+					<TD style="width: 99%; white-space: nowrap;" ID="livetraffic">
+					</TD>
+				</TR>
+				<SCRIPT TYPE="text/javascript">
+				<!--
+					function live_traffic_start() {
+						xajax_getThroughput('{$nodeinfo.ip}');
+					}
+
+					function live_traffic_finished() {
+						setTimeout("live_traffic_start()", 3000);
+					}
+
+					live_traffic_start();
+				//-->
+				</SCRIPT>
+				{/if}
 			</TABLE>
 		</TD>
 	</TR>
